--- a/.github/workflows/phpdoc.yml
+++ b/.github/workflows/phpdoc.yml
@@ -2,7 +2,7 @@ name: documentation
 
 on:
   push:
-    branches: [main]
+    branches: ["main","1.0.0-dev"]
 
   # Allow running the workflow manually from the Actions tab
   #workflow_dispatch:
